--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint src __tests__",
     "lint:fix": "eslint --fix src __tests__",
     "test": "jest __tests__",
-    "validate": "npm run lint:fix && npm run test",
+    "validate": "npm run lint && npm run test",
+    "validate:fix": "npm run lint:fix && npm run test",
     "commit": "cz"
   },
   "repository": {
