--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "private": "true",
   "scripts": {
     "launch": "node src/app.js",
-    "lint": "eslint src __tests__",
-    "lint:fix": "eslint --fix src __tests__",
-    "test": "jest __tests__",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "test": "jest",
     "validate": "npm run lint && npm run test",
     "validate:fix": "npm run lint:fix && npm run test",
     "commit": "cz"
